--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Responsive 404 website - Bedimcode</title>
   </head>
   <body>
+    <div id="cursor"></div>
+    <div id="cursor-border"></div>
     <!--==================== HEADER ====================-->
     <header class="header">
       <nav class="nav container">
